6-19-2025
- add a new key to mkHost called secretsFile. It defaults to null and takes a path to a secrets.yaml file
- when a path is provided the sops module will be enabled with the default sops file set to the path specified.


6-17-2025
- fix fzf config
- add fzf profile for nixos and home-manager
- add system utilities that are already present to home-manager's shell path
- add fzf-edit to nix-library package set. running fzf-edit will open the file selected with $EDITOR


6-15-2025
- rewrite screenshot scripts for TWM desktops
- set XDG_SCREENSHOTS_DIR to ~/Pictures/screenshots via default home-manager profile
- Add control + Printscreen keybind to wayland for taking a screenshot of the current active window
- use grimblast for hyprland
- Fix a bug where slurp would run multiple times if the screenshot key was pressed while actively taking a screenshot


6-09-2025
- make gdm the default display manager when the gnome nixOS module is enabled.


6-08-2025
- add fish
- move shell-aliases to shared modules


6-06-2025
- fix tmux sourcing issue with the dracula theme plugin
- install old HP laptop
- add openboardviewer to programs
- add disko modules to templates
- sops module now properly defaults sops.age.keyFile so it can be changed by other flakes


6-02-2025
- move nixos-update to shellScriptBin instead of a shellAlias for zsh


6-01-2025
- replace catpucchin tmux with dracula tmux
- add CPU RAM and battery modules to tmux
- removed old waybar themes
- prevent stylix from adding unnecessary css to waybar
- set environment variable NH_NO_CHECKS=1 as a temporary solution to "please enable nix-command and flakes" even if it is enabled
- update flake to linux 6.15
- resolved issues with nautilus and gvfs as a result of the flake update
- added dolphin as a filemanager option to nixos and HM through programs.dolphin.enable
- replace services.lact for the one in nixpkgs


5-28-2025
- add swayidle and hypridle
- swayidle is not compatable with hyprland