@@ -16,7 +16,8 @@ in
     , server ? false # is this machine a server
     , vm ? false # is this a virtual machine?
     , iso ? false # is this an ISO?
-    , secretsFile ? null
+    , keys ? null # personal keys for ease of access
+    , secretsFile ? null # path to secrets file
     , system ? "x86_64-linux" # what cpu architecture?
     , stateVersion ? "25.11" # what version of nixos was this machine initalized?
     , configDir # directory for extra host configuration
@@ -32,7 +33,7 @@ in
     lib.nixosSystem {
       inherit system;
       specialArgs = {
-        inherit self system inputs outputs lib wallpapers icons binaries hostName bios cpu gpu users desktop secretsFile server vm iso stateVersion;
+        inherit self system inputs outputs lib wallpapers icons binaries hostName bios cpu gpu users desktop secretsFile keys server vm iso stateVersion;
       };
       modules =
         let
@@ -67,6 +68,7 @@ in
     , server ? false # is this user on a server
     , vm ? false # is this user on a virtual machine?
     , iso ? false # is this user on an ISO?
+    , keys ? null # public keys for ease of access
     , system ? "x86_64-linux" # what cpu architecture does your host have?
     , stateVersion ? "25.05" # what version of home-manager was this user initalized?
     , profile ? null # directory for your extra user configuration
@@ -96,7 +98,7 @@ in
         profile
       ];
       extraSpecialArgs =
-        { inherit self inputs outputs lib username hostName desktop wallpapers icons binaries server vm iso system stateVersion; };
+        { inherit self inputs outputs lib username hostName desktop keys wallpapers icons binaries server vm iso system stateVersion; };
     };
 
   mkLXC =
@@ -107,6 +109,7 @@ in
     , stateVersion ? "25.05"
     , format ? "proxmox-lxc"
     , personal ? false # whether to enable my personal server profile
+    , keys ? null
     , ...
     }:
     let
@@ -115,7 +118,7 @@ in
     nixosGenerate {
       inherit format system;
       specialArgs = {
-        inherit self inputs outputs lib system stateVersion;
+        inherit self inputs outputs keys lib system stateVersion;
       };
       modules = [
         (outputs.nixosModules)
