@@ -1,5 +1,5 @@
 # server module for my personal servers
-{ outputs, lib, config, ... }:
+{ keys, lib, config, ... }:
 let
   inherit (lib) mkDefault mkIf mkEnableOption;
   cfg = config.profiles.server.personal;
@@ -8,7 +8,7 @@ in
   options.profiles.server.personal.enable = mkEnableOption "personal server profile";
   config = mkIf cfg.enable {
     users.users."root" = {
-      openssh.authorizedKeys.keys = mkDefault [ outputs.keys.g_pub ];
+      openssh.authorizedKeys.keys = mkDefault [ keys.g_ssh_pub ];
     };
 
     nix.settings.trusted-users = [ "g" ];
